<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/bg"
    android:padding="0dp">

    <ImageView
        android:id="@+id/ivTopBackground"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_placeholder1" />

    <TextView
        android:id="@+id/tvWelcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="#333333"
        android:textSize="40sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tvWelcomeDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dec"
        android:textColor="#666666"
        android:textSize="22sp"
        android:gravity="center"
        android:layout_marginTop="8dp"/>

    <ImageView
        android:id="@+id/ivWelcomeImage"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:src="@drawable/ic_placeholder"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/btnGetStarted"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:text="@string/home_start"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_button"/>

</LinearLayout>